For 1.14:
	- Sphere solid flag now works.

	- "Endian" bug fixed in Binding stack code.

	- collision turned off by default as it affected conformance; some of the
	  Web3D Interchange profile conformance tests assumed that the viewpoint was
	  within a primitive shape.

	- IndexedLineSet, LineSet, and PointSet  nodes up to spec compliance.

	- MultiTexture node support.

	- Ambient intensity light bug fixed.

	- X3D - duplicate DEFs now flagged.

	- parse META, PROFILE, COMPONENT in VRML encoded X3D files.

	- support for building rpms in Makefile.PL.

	- status bar updated to reduce size and increase information.

	- Threading problem in ProdCon fixed - mainly seen in EAI code.
	
	- Added NavigationInfo speed field values to FLY mode rotations and
	  translations.

	- fixed bug in Javascript invocation dealing with multi float
	  (3F, 4F) values. 

For 1.13:
	- Now use freely distributable font files. See the README in the
	  fonts directory.

	- EXTERNPROTOS can now reference PROTOS in the Extern'd file.

	- freewrlSystem now keeps a list of children; on doQuit it attempts
	  to remove these children from the system with a kill (child,SIGINT).
	  This solves a problem where wget can hang and leave the freewrl 
	  display thread around.

	- fixed a problem that caused add/remove children from EAI and
	  scripts to fail (segfault)

	- revised error messages where some field values are incorrect;
	  eg, putting a TextureCoord as a coord field of an IndexedFaceSet
	  now displays a more informative message.

	- Builds on 64 bit processors. Some scripting/EAI/CLASS links not
	  yet correct.

	- ColorRGBA nodes supported for IndexedFaceSet, and equiv. NOT
	  supported in scripting/eai yet.

	- updated Javascript version - new Mozilla SpiderMonkey version
	  is 1.5.

	- Javascripting - MF nodes and script to script routing now is
	  much better (may still be bugs, but it works for my tests)

	- EAI code changed so that the current Browser timestamp is