@@ -33,6 +33,7 @@
 
 #include "headers.h"
 
+void start_textureTransform (void *textureNode, int ttnum);
 
 int
 get_now_mapped(void);
